--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,12 +3,11 @@ project:
   output-dir: docs
 
 website:
-  title: "MICROECONOMETRICS QUARTO WEBSITE"
+  title: "MICHAEL ADU-GYAMFI"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
 
 format:
   html:
